imageHolder.css
.imageHolder{
    width: 100%;
    height: 200px;
    display: flex;
    flex-direction: row;
    flex: 1;
    margin-left: 10px;
}

.imageHolderImg{
    object-fit: fill;
    border: 2px solid rgba(0, 0, 0, 0.368);
    border-radius: 5px;
    cursor: pointer;
    margin: 2px;
    transition-duration: 0.5s;
}

.imageHolderImg:hover{
    border: 4px solid rgb(192, 181, 255);
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(204, 204, 204, 0.19);
    transition-duration: 0.5s;
}


.imageModal{
  position: fixed;
  display:none;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4);
  overflow:auto;
}

.imageModalHolder{
    display: block;
    margin: auto;
    height: 80%;

    width: fit-content;

    border: 10px solid rgba(81, 81, 81, 0.443);
    border-radius: 5px;
    object-fit: contain;
    overflow: hidden;
}

.imageModalImage{
    object-fit: contain;
    height: 100%;
}

@media screen and (max-width: 850px) {
    .imageHolder{
        width: 100%;
        height: 140px;
    }
}

